2007-09-10  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #330223

	* default-source.c: (commit_default_calendar):
	Added type E_CAL_SOURCE_TYPE_JOURNAL to other types.

2007-03-20  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #419524

	* Include <glib/gi18n.h> instead of <libgnome/gnome-i18n.h>.

2006-10-21  Priit Laes  <amd@store20.com>

	* org-gnome-default-source.eplug.xml: Fix typo. Fixes #363999.

2006-02-11  Andre Klapper <a9016009@gmx.de>

	* default-source.c: adding mnemonic. Fixes bug 328151.

2005-12-25  Funda Wang  <fundawang@linux.net.cn>

	* Makefile.am: Mark this plugin as translatable (bug#301149).

2005-12-12  Harish Krishnaswamy  <kharish@novell.com>

	* Makefile.am: Fix make-clean issues.

2005-12-07  Funda Wang  <fundawang@linux.net.cn>

	* org-gnome-default-source.eplug.in: i18nlized.

2005-08-23  Not Zed  <NotZed@Ximian.com>

	* default-source.c: forward declare exported func.

2005-08-10  Tor Lillqvist  <tml@novell.com>

	* org-gnome-default-source.eplug.in: Use SOEXT.

2005-06-27  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: There is no EVOLUTION_CFLAGS. Use
	NO_UNDEFINED. Link with EVOLUTION_CALENDAR_LIBS and
	EVOLUTION_ADDRESSBOOK_LIBS.

2005-05-06  Chenthill Palanisamy  <pchenthill@novell.com>

	* default-source.c: (org_gnome_default_book): Removed the extra
	space in "Mark  as default folder".

2005-02-24  Björn Torkelsson  <torkel@acc.umu.se>

	* org-gnome-default-source.eplug.in: Added author and description.

2005-01-21 Sivaiah Nallagatla <snallagatla@novell.com>

	* initil commit 